--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,12 @@ body {
 }
 
 .primary {
-    background-color: #7b4bf5;
+    background-color: purple;
     color: #fafafa
 }
 
 .textprimary {
-    color: #7b4bf5;
+    color: purple;
 }
 
 .shadow {
